--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <header>
     <nav>
         <img src="./img/aLVARO.png" alt="" width="15%">
-        <input type="search" class="inputSearch" placeholder="tan mk">
+        <input type="search" class="inputSearch" placeholder="Search collections and creators">
         <ul>
             <!---Cada # se le tiene que asignar a la sección-->
             <li><a href="#launchpad">Launchpad</a></li>
