--- a/index.html
+++ b/index.html
@@ -132,7 +132,63 @@
             </div>
         </section>
 
+        <section id="launchpad">
+            <h2>Launchpad</h2>
+            <div class="container-cards">
+                <div class="card" style="width: 18rem;">
+                    <img class="image-launchpad"
+                        src="https://img-cdn.magiceden.dev/rs:fill:252:189:0:0/plain/https://bafybeidy5jk7y6es4lesqpu5tfwogctnur7nrlek42ex2b56z5pz25dqta.ipfs.nftstorage.link/"
+                        class="card-img-top" alt="...">
+                    <div class="card-body s-launchpad">
+                        <h5 class="card-title">Rekt Dog</h5>
+                        <h6 class="card-text launchpad-price">Price: 0.87</h6>
+                        <div class="time">
+                            <p>10h 40m 17s</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <img class="image-launchpad"
+                        src="https://img-cdn.magiceden.dev/rs:fill:252:189:0:0/plain/https://bafkreid6cltd5lykh2ulae5lnd2uml6v7or2ptbu7fjdtpqxlsd4yjxk7u.ipfs.nftstorage.link/"
+                        class="card-img-top" alt="...">
 
+                    <div class="card-body s-launchpad">
+                        <h5 class="card-title">Star Atlas: Core Epic</h5>
+                        <h6 class="card-text launchpad-price">Price: 1.07</h6>
+                        <div class="time">
+                            <p>LIVE</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <img class="image-launchpad"
+                        src="https://img-cdn.magiceden.dev/rs:fill:252:189:0:0/plain/https://bafybeigwv346cy7sadxbfxhdb5otjxyzec6ycgum7k3ovktvbe2577ku3e.ipfs.nftstorage.link/"
+                        class="card-img-top" alt="...">
+                    <div class="card-body s-launchpad">
+                        <h5 class="card-title">The Faction Captains</h5>
+                        <h6 class="card-text launchpad-price">Price: 0.57</h6>
+                        <div class="time">
+                            <p>LIVE</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <img class="image-launchpad"
+                        src="https://img-cdn.magiceden.dev/rs:fill:252:189:0:0/plain/https://bafybeicpy2di5cnvyb4sgccq2r57ss2gcum64feqsaymimvkoyvwmjitca.ipfs.nftstorage.link/"
+                        class="card-img-top" alt="...">
+                    <div class="card-body s-launchpad">
+                        <h5 class="card-title">Littlebits World</h5>
+                        <h6 class="card-text launchpad-price">Price: 0.79</h6>
+                        <div class="time">
+                            <p>18h 37m 12s</p>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+
+        </section>
 
     </main>
 
@@ -174,7 +230,6 @@
             </div>
         </div>
     </footer>
-    <script src="sketch.js"></script>
 </body>
 
 </html>
