--- a/index.html
+++ b/index.html
@@ -112,6 +112,34 @@
             </div>
         </section>
 
+        <!---Sección popular-->
+        <section class="popular-collections">
+            <h2>Popular Collections</h2>
+            <div class="cards-container">
+              <div class="card cardo">
+                <img src="img/Frame 84.png">
+                <h3>DMI Crew</h3>
+                <p>22,81%⬆️</p>
+              </div>
+              <div class="card">
+                <img src="img/Frame 85.png">
+                <h3>VOO</h3>
+                <p>22,81%⬆⬇️</p>
+              </div>
+              <div class="card">
+                <img src="img/Frame 86.png">
+                <h3>Mindwalk</h3>
+                <p>22,81%⬆⬇️</p>
+              </div>
+              <div class="card">
+                <img src="img/Frame 87.png">
+                <h3>N0ALCR4</h3>
+                <p>22,81%⬆️</p>
+              </div>
+            </div>
+          </section>
+          
+
         <section id="stats">
             <h2>Stats</h2>
             <div id="stats-container">
