Add function for carousel js.

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <!---Header-->
 <header>
     <nav>
-        <img src="./img/aLVARO.png" alt="" width="15%" />
-        <input type="search" class="inputSearch" placeholder="Search collections and creators" />
+        <img src="./img/aLVARO.png" alt="" width="15%">
+        <input type="search" class="inputSearch" placeholder="Search collections and creators">
         <ul>
             <!---Cada # se le tiene que asignar a la sección-->
             <li><a href="#launchpad">Launchpad</a></li>
@@ -182,17 +182,17 @@
                 <h3>DMI Crew</h3>
                 <p>22,81%⬆️</p>
               </div>
-              <div class="cardo">
+              <div class="card">
                 <img src="img/Frame 85.png">
                 <h3>VOO</h3>
                 <p>22,81%⬆⬇️</p>
               </div>
-              <div class="cardo">
+              <div class="card">
                 <img src="img/Frame 86.png">
                 <h3>Mindwalk</h3>
                 <p>22,81%⬆⬇️</p>
               </div>
-              <div class="cardo">
+              <div class="card">
                 <img src="img/Frame 87.png">
                 <h3>N0ALCR4</h3>
                 <p>22,81%⬆️</p>
