--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="auctionSection.css">
+    <link rel="stylesheet" type="text/css" href="finishedAuctionSection.css">
+    <link rel="stylesheet" type="text/css" href="twitterSection.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <title>Magic Eden</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,9 +16,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-
-    
-
     <script src="sketch.js"></script>
 </head>
 
@@ -131,45 +131,48 @@
                 </div>       
         </section>
         <section class="finished-auctions">
-            <div class=" s-finished-auctions">
+            <div class="s-finished-auctions">
                 <div class="nft-img"></div>
-                <img src="./img/img-auction.jpg" alt="finished-auction-img" class="f-auction">
-                <h1 class="nft-name">UNHCR hand</h1>
-                <p class="description">Okay beards</p>
-                <div class="ended">365.00 SOL ENDED</div>
+                    <img src="./img/img-auction.jpg" alt="finished-auction-img" class="f-auction">
+                    <h1 class="nft-name">UNHCR hand</h1>
+                    <p class="description">Okay beards</p>
+                    <div class="ended">365.00 SOL ENDED</div>
             </div>
-            <div class=" s-finished-auctions">
+            <div class="s-finished-auctions">
                 <div class="nft-img"></div>
-                <img src="https://images.unsplash.com/photo-1645731504636-72725e46b26b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjB8fG5mdHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1600&q=60" alt="finished-auction-img" class="f-auction">
-                <h1 class="nft-name">UNHCR hand</h1>
-                <p class="description">Okay beards</p>
-                <div class="ended">365.00 SOL ENDED</div>
-            </div><div class=" s-finished-auctions">
-                <div class="nft-img"></div>
-                <img src="https://images.unsplash.com/photo-1660912354672-42c807fac14c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzJ8fG5mdHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1600&q=60" alt="finished-auction-img" class="f-auction">
-                <h1 class="nft-name">UNHCR hand</h1>
-                <p class="description">Okay beards</p>
-                <div class="ended">365.00 SOL ENDED </div>
-            </div><div class=" s-finished-auctions">
-                <div class="nft-img"></div>
-                <img src="https://plus.unsplash.com/premium_photo-1663931932521-0207c53c564b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTl8fG5mdHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1600&q=60" alt="finished-auction-img" class="f-auction">
-                <h1 class="nft-name">UNHCR hand</h1>
-                <p class="description">Okay beards</p>
-                <div class="ended">365.00 SOL ENDED</div>
-            </div><div class=" s-finished-auctions">
-                <div class="nft-img"></div>
-                <img src="https://images.unsplash.com/photo-1645731504303-860e0da74fee?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjN8fG5mdHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1600&q=60" alt="finished-auction-img" class="f-auction">
-                <h1 class="nft-name">UNHCR hand</h1>
-                <p class="description">Okay beards</p>
-                <div class="ended">365.00 SOL ENDED</div>
-            </div><div class=" s-finished-auctions">
-                <div class="nft-img"></div>
-                <img src="https://images.unsplash.com/photo-1645516484419-35a747c99474?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzF8fG5mdHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1600&q=60" alt="finished-auction-img" class="f-auction">
-                <h1 class="nft-name">UNHCR hand</h1>
-                <p class="description">Okay beards</p>
-                <div class="ended">365.00 SOL ENDED</div>
+                    <img src="https://images.unsplash.com/photo-1645731504636-72725e46b26b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjB8fG5mdHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1600&q=60" alt="finished-auction-img" class="f-auction">
+                    <h1 class="nft-name">UNHCR hand</h1>
+                    <p class="description">Okay beards</p>
+                    <div class="ended">365.00 SOL ENDED</div>
             </div>
-        </section>
+            <div class="s-finished-auctions">
+                <div class="nft-img"></div>
+                    <img src="https://images.unsplash.com/photo-1660912354672-42c807fac14c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzJ8fG5mdHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1600&q=60" alt="finished-auction-img" class="f-auction">
+                    <h1 class="nft-name">UNHCR hand</h1>
+                    <p class="description">Okay beards</p>
+                    <div class="ended">365.00 SOL ENDED </div>
+            </div>
+            <div class="s-finished-auctions">
+                <div class="nft-img"></div>
+                    <img src="https://plus.unsplash.com/premium_photo-1663931932521-0207c53c564b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTl8fG5mdHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1600&q=60" alt="finished-auction-img" class="f-auction">
+                    <h1 class="nft-name">UNHCR hand</h1>
+                    <p class="description">Okay beards</p>
+                    <div class="ended">365.00 SOL ENDED</div>
+            </div>
+            <div class="s-finished-auctions">
+                <div class="nft-img"></div>
+                    <img src="https://images.unsplash.com/photo-1645731504303-860e0da74fee?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjN8fG5mdHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1600&q=60" alt="finished-auction-img" class="f-auction">
+                    <h1 class="nft-name">UNHCR hand</h1>
+                    <p class="description">Okay beards</p>
+                    <div class="ended">365.00 SOL ENDED</div>
+            </div>
+            <div class="s-finished-auctions">
+                <div class="nft-img"></div>
+                    <img src="https://images.unsplash.com/photo-1645516484419-35a747c99474?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzF8fG5mdHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1600&q=60" alt="finished-auction-img" class="f-auction">
+                    <h1 class="nft-name">UNHCR hand</h1>
+                    <p class="description">Okay beards</p>
+                    <div class="ended">365.00 SOL ENDED</div>
+            </div>
         </section>
 
 
