--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </section>
 
         <section class="auction">
-            <div class="row">
+            <div class="row-auction">
                 <div class="col-md-6 column">
                     <h2>DeezNode #047</h2>
                     <p class="auction-text">The highest performance Private RPC Cluster in Solana. Global Load Balancing, extremely high throughput, redundancy, and high quality anime 1/1 art for every revealed NFT. Our latest update includes Aptos Nodes.</p>
@@ -131,6 +131,7 @@
                 </div>       
         </section>
         <section class="finished-auctions">
+            <h2 class="finished-auctions-title">Finished Auctions</h2>
             <div class="s-finished-auctions">
                 <div class="nft-img"></div>
                     <img src="./img/img-auction.jpg" alt="finished-auction-img" class="f-auction">
@@ -143,14 +144,14 @@
                     <img src="https://images.unsplash.com/photo-1645731504636-72725e46b26b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjB8fG5mdHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1600&q=60" alt="finished-auction-img" class="f-auction">
                     <h1 class="nft-name">UNHCR hand</h1>
                     <p class="description">Okay beards</p>
-                    <div class="ended">365.00 SOL ENDED</div>
+                    <div class="ended">3.00 SOL ENDED</div>
             </div>
             <div class="s-finished-auctions">
                 <div class="nft-img"></div>
                     <img src="https://images.unsplash.com/photo-1660912354672-42c807fac14c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzJ8fG5mdHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1600&q=60" alt="finished-auction-img" class="f-auction">
                     <h1 class="nft-name">UNHCR hand</h1>
                     <p class="description">Okay beards</p>
-                    <div class="ended">365.00 SOL ENDED </div>
+                    <div class="ended">5.00 SOL ENDED </div>
             </div>
             <div class="s-finished-auctions">
                 <div class="nft-img"></div>
@@ -164,14 +165,14 @@
                     <img src="https://images.unsplash.com/photo-1645731504303-860e0da74fee?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjN8fG5mdHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1600&q=60" alt="finished-auction-img" class="f-auction">
                     <h1 class="nft-name">UNHCR hand</h1>
                     <p class="description">Okay beards</p>
-                    <div class="ended">365.00 SOL ENDED</div>
+                    <div class="ended">35.00 SOL ENDED</div>
             </div>
             <div class="s-finished-auctions">
                 <div class="nft-img"></div>
                     <img src="https://images.unsplash.com/photo-1645516484419-35a747c99474?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzF8fG5mdHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1600&q=60" alt="finished-auction-img" class="f-auction">
                     <h1 class="nft-name">UNHCR hand</h1>
                     <p class="description">Okay beards</p>
-                    <div class="ended">365.00 SOL ENDED</div>
+                    <div class="ended">36.00 SOL ENDED</div>
             </div>
         </section>
 
