Add responsive twitter.

--- a/index.html
+++ b/index.html
@@ -114,8 +114,10 @@
         </section>
 
         <section class="auction">
+            <h2>Live auction</h2>
             <div class="row-auction">
-                <div class="col-md-6 column">
+                <div class="col-left-auction">
+                    <img src="https://images.unsplash.com/photo-1660912354672-42c807fac14c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzJ8fG5mdHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1600&q=60" alt="auction-img" class="auction-img-left">
                     <h2>DeezNode #047</h2>
                     <p class="auction-text">The highest performance Private RPC Cluster in Solana. Global Load Balancing, extremely high throughput, redundancy, and high quality anime 1/1 art for every revealed NFT. Our latest update includes Aptos Nodes.</p>
                     <div class="social-links">
@@ -125,8 +127,12 @@
                     </div>
                     <button class="btn btn-custom">Place yor bid</button>
                 </div>
-                  <div class="col-md-6 column">
-                    <figure class="img-auction"><img src="./img/img-auction.jpg" alt="auction img" width="80%"></figure>
+                  <div class="col-right-auction">
+                    <img src="./img/img-auction.jpg" alt="auction img" class="auction-img-right">
+                    <P>Starting bid</P>
+                    <h2>100.00 SOL</h2>
+                    <p>Auction starts in</p>
+                    <h2>12 Days</h2>
                   </div>
                 </div>       
         </section>
@@ -442,7 +448,17 @@
                     </div>
                 </div>
             </div>
-
+        </section>
+        <section class="twitter">
+            <div class="twitter-title">
+                <h2 class="twitter-h2">What people say about...</h2>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+            </div>
+                <div class="twitter-carousel">
+                    <div class="comment">Calling all creators and enthusiasts! Our website is now live and ready to help you bring your ideas to life in a decentralized way. Visit us at www.magiceden.io</div>
+                    <div class="comment">journey to oasys... coming soon 🪐</div>
+                    <div class="comment">@MagicEden adds @MoonPay for instant NFT purchases. The integration allows ME users to purchase @0xPolygon NFTs directly with a card.</div>  
+                </div>
         </section>
 
 
@@ -487,7 +503,6 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-
+    <script type="module" src="sketch.js "></script>
 </body>
-
 </html>
