Add responsive auction section.

--- a/index.html
+++ b/index.html
@@ -116,18 +116,18 @@
         <section class="auction">
             <h2>Live auction</h2>
             <div class="row-auction">
-                <div class="col-left-auction">
+                <div class="col-auction">
                     <img src="https://images.unsplash.com/photo-1660912354672-42c807fac14c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzJ8fG5mdHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1600&q=60" alt="auction-img" class="auction-img-left">
                     <h2>DeezNode #047</h2>
                     <p class="auction-text">The highest performance Private RPC Cluster in Solana. Global Load Balancing, extremely high throughput, redundancy, and high quality anime 1/1 art for every revealed NFT. Our latest update includes Aptos Nodes.</p>
-                    <div class="social-links">
+                    <div class="social-auction">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
                     </div>
                     <button class="btn btn-custom">Place yor bid</button>
                 </div>
-                  <div class="col-right-auction">
+                  <div class="col-auction">
                     <img src="./img/img-auction.jpg" alt="auction img" class="auction-img-right">
                     <P>Starting bid</P>
                     <h2>100.00 SOL</h2>
