Fix some details auction section.

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </section>
 
         <section class="auction">
-            <h2>Live auction</h2>
+            <h2 class="title-auction">Live auction</h2>
             <div class="row-auction">
                 <div class="col-auction">
                     <img src="https://images.unsplash.com/photo-1660912354672-42c807fac14c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzJ8fG5mdHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1600&q=60" alt="auction-img" class="auction-img-left">
@@ -125,13 +125,13 @@
                         <a href="#"><i class="fab fa-twitter"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
                     </div>
-                    <button class="btn btn-custom">Place yor bid</button>
+                    <a href="#" class="button-place-bid">Place your bid</a>
                 </div>
                   <div class="col-auction">
                     <img src="./img/img-auction.jpg" alt="auction img" class="auction-img-right">
-                    <P>Starting bid</P>
+                    <P class="text-default">Starting bid</P>
                     <h2>100.00 SOL</h2>
-                    <p>Auction starts in</p>
+                    <p class="text-default">Auction starts in</p>
                     <h2>12 Days</h2>
                   </div>
                 </div>       
