--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
             <div class="container-cards">
                 <div class="card s-about-us">
                     <div class="card-body">
-                        <i class="fas fa-circle-info"></i>
+                        <i class="fas fa-circle-info icon-about"></i>
                         <br>
-                        <h5 class="card-title">¿What is it?</h5>
+                        <h5 class="card-title title-about">¿What is it?</h5>
                         <p class="card-text">Magic Eden is a decentralized NFT marketplace built
                             on the Solana blockchain. We can process over 65,000 transactions per
                             second and have a block time of one second.</p>
@@ -85,8 +85,8 @@
 
                 <div class="card s-about-us">
                     <div class="card-body">
-                        <i class="fas fa-rocket"></i>
-                        <h5 class="card-title">Launchpad function</h5>
+                        <i class="fas fa-rocket icon-about"></i>
+                        <h5 class="card-title title-about">Launchpad function</h5>
                         <p class="card-text">Magic Eden's minting platform, which is also used as a
                             research program, makes the creation and distribution of NFT an easy process
                             and requires little or no technical knowledge.</p>
@@ -94,8 +94,8 @@
                 </div>
                 <div class="card s-about-us">
                     <div class="card-body">
-                        <i class="fa-solid fa-plane-departure"></i>
-                        <h5 class="card-title">Upcoming launches</h5>
+                        <i class="fa-solid fa-plane-departure icon-about"></i>
+                        <h5 class="card-title title-about">Upcoming launches</h5>
                         <p class="card-text">Magic Eden tracks and vets the projects it features on the
                             platform, also highlighting some of the most important upcoming launches. This
                             can help investors save a lot of research work.</p>
@@ -103,8 +103,8 @@
                 </div>
                 <div class="card s-about-us">
                     <div class="card-body">
-                        <i class="fa-solid fa-chart-line"></i>
-                        <h5 class="card-title">Stats</h5>
+                        <i class="fa-solid fa-chart-line icon-about"></i>
+                        <h5 class="card-title title-about">Stats</h5>
                         <p class="card-text">When buying an NFT, there are elements that help to give it
                             value over time, "Stats" shows some indicators of which NFTs are popular now
                             and which will continue to be popular.</p>
@@ -313,49 +313,49 @@
         <section id="launchpad">
             <h2>Launchpad</h2>
             <div class="container-cards">
-                <div class="card" style="width: 18rem;">
+                <div class="card c-launchpad" style="width: 18rem;">
                     <img class="image-launchpad"
                         src="https://img-cdn.magiceden.dev/rs:fill:252:189:0:0/plain/https://bafybeidy5jk7y6es4lesqpu5tfwogctnur7nrlek42ex2b56z5pz25dqta.ipfs.nftstorage.link/"
                         class="card-img-top" alt="...">
                     <div class="card-body s-launchpad">
-                        <h5 class="card-title">Rekt Dog</h5>
+                        <h5 class="card-title launch-title">Rekt Dog</h5>
                         <h6 class="card-text launchpad-price">Price: 0.87</h6>
                         <div class="time">
                             <p>10h 40m 17s</p>
                         </div>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;">
+                <div class="card c-launchpad" style="width: 18rem;">
                     <img class="image-launchpad"
                         src="https://img-cdn.magiceden.dev/rs:fill:252:189:0:0/plain/https://bafkreid6cltd5lykh2ulae5lnd2uml6v7or2ptbu7fjdtpqxlsd4yjxk7u.ipfs.nftstorage.link/"
                         class="card-img-top" alt="...">
 
                     <div class="card-body s-launchpad">
-                        <h5 class="card-title">Star Atlas: Core Epic</h5>
+                        <h5 class="card-title launch-title">Star Atlas: Core Epic</h5>
                         <h6 class="card-text launchpad-price">Price: 1.07</h6>
                         <div class="time">
                             <p>LIVE</p>
                         </div>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;">
+                <div class="card c-launchpad" style="width: 18rem;">
                     <img class="image-launchpad"
                         src="https://img-cdn.magiceden.dev/rs:fill:252:189:0:0/plain/https://bafybeigwv346cy7sadxbfxhdb5otjxyzec6ycgum7k3ovktvbe2577ku3e.ipfs.nftstorage.link/"
                         class="card-img-top" alt="...">
                     <div class="card-body s-launchpad">
-                        <h5 class="card-title">The Faction Captains</h5>
+                        <h5 class="card-title launch-title">The Faction Captains</h5>
                         <h6 class="card-text launchpad-price">Price: 0.57</h6>
                         <div class="time">
                             <p>LIVE</p>
                         </div>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;">
+                <div class="card c-launchpad" style="width: 18rem;">
                     <img class="image-launchpad"
                         src="https://img-cdn.magiceden.dev/rs:fill:252:189:0:0/plain/https://bafybeicpy2di5cnvyb4sgccq2r57ss2gcum64feqsaymimvkoyvwmjitca.ipfs.nftstorage.link/"
                         class="card-img-top" alt="...">
                     <div class="card-body s-launchpad">
-                        <h5 class="card-title">Littlebits World</h5>
+                        <h5 class="card-title launch-title">Littlebits World</h5>
                         <h6 class="card-text launchpad-price">Price: 0.79</h6>
                         <div class="time">
                             <p>18h 37m 12s</p>
