Add section finished sections details.

--- a/index.html
+++ b/index.html
@@ -139,42 +139,42 @@
         <section class="finished-auctions">
             <h2 class="finished-auctions-title">Finished Auctions</h2>
             <div class="s-finished-auctions">
-                <div class="nft-img"></div>
+                <div class="nft-img class"></div>
                     <img src="./img/img-auction.jpg" alt="finished-auction-img" class="f-auction">
                     <h1 class="nft-name">UNHCR hand</h1>
                     <p class="description">Okay beards</p>
                     <div class="ended">365.00 SOL ENDED</div>
             </div>
             <div class="s-finished-auctions">
-                <div class="nft-img"></div>
+                <div class="nft-img s"></div>
                     <img src="https://images.unsplash.com/photo-1645731504636-72725e46b26b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjB8fG5mdHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1600&q=60" alt="finished-auction-img" class="f-auction">
                     <h1 class="nft-name">UNHCR hand</h1>
                     <p class="description">Okay beards</p>
                     <div class="ended">3.00 SOL ENDED</div>
             </div>
             <div class="s-finished-auctions">
-                <div class="nft-img"></div>
+                <div class="nft-img t"></div>
                     <img src="https://images.unsplash.com/photo-1660912354672-42c807fac14c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzJ8fG5mdHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1600&q=60" alt="finished-auction-img" class="f-auction">
                     <h1 class="nft-name">UNHCR hand</h1>
                     <p class="description">Okay beards</p>
                     <div class="ended">5.00 SOL ENDED </div>
             </div>
             <div class="s-finished-auctions">
-                <div class="nft-img"></div>
+                <div class="nft-img f"></div>
                     <img src="https://plus.unsplash.com/premium_photo-1663931932521-0207c53c564b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTl8fG5mdHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1600&q=60" alt="finished-auction-img" class="f-auction">
                     <h1 class="nft-name">UNHCR hand</h1>
                     <p class="description">Okay beards</p>
                     <div class="ended">365.00 SOL ENDED</div>
             </div>
             <div class="s-finished-auctions">
-                <div class="nft-img"></div>
+                <div class="nft-img fi"></div>
                     <img src="https://images.unsplash.com/photo-1645731504303-860e0da74fee?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjN8fG5mdHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1600&q=60" alt="finished-auction-img" class="f-auction">
                     <h1 class="nft-name">UNHCR hand</h1>
                     <p class="description">Okay beards</p>
                     <div class="ended">35.00 SOL ENDED</div>
             </div>
             <div class="s-finished-auctions">
-                <div class="nft-img"></div>
+                <div class="nft-img x"></div>
                     <img src="https://images.unsplash.com/photo-1645516484419-35a747c99474?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzF8fG5mdHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1600&q=60" alt="finished-auction-img" class="f-auction">
                     <h1 class="nft-name">UNHCR hand</h1>
                     <p class="description">Okay beards</p>
@@ -455,9 +455,9 @@
                 <a href="#"><i class="fab fa-twitter"></i></a>
             </div>
                 <div class="twitter-carousel">
-                    <div class="comment">Calling all creators and enthusiasts! Our website is now live and ready to help you bring your ideas to life in a decentralized way. Visit us at www.magiceden.io</div>
-                    <div class="comment">journey to oasys... coming soon 🪐</div>
-                    <div class="comment">@MagicEden adds @MoonPay for instant NFT purchases. The integration allows ME users to purchase @0xPolygon NFTs directly with a card.</div>  
+                    <div class="comment"><p>Calling all creators and enthusiasts! Our website is now live and ready to help you bring your ideas to life in a decentralized way. Visit us at www.magiceden.io</p></div>
+                    <div class="comment"><p>Journey to oasys... coming soon 🪐</p></div>
+                    <div class="comment"><p>@MagicEden adds @MoonPay for instant NFT purchases. The integration allows ME users to purchase @0xPolygon NFTs directly with a card.</p></div>  
                 </div>
         </section>
 
