--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <i class="fas fa-circle-info icon-about"></i>
                         <br>
                         <h5 class="card-title title-about">¿What is it?</h5>
-                        <p class="card-text">Magic Eden is a decentralized NFT marketplace built
+                        <p class="card-text text-about">Magic Eden is a decentralized NFT marketplace built
                             on the Solana blockchain. We can process over 65,000 transactions per
                             second and have a block time of one second.</p>
                     </div>
@@ -87,7 +87,7 @@
                     <div class="card-body">
                         <i class="fas fa-rocket icon-about"></i>
                         <h5 class="card-title title-about">Launchpad function</h5>
-                        <p class="card-text">Magic Eden's minting platform, which is also used as a
+                        <p class="card-text text-about">Magic Eden's minting platform, which is also used as a
                             research program, makes the creation and distribution of NFT an easy process
                             and requires little or no technical knowledge.</p>
                     </div>
@@ -96,7 +96,7 @@
                     <div class="card-body">
                         <i class="fa-solid fa-plane-departure icon-about"></i>
                         <h5 class="card-title title-about">Upcoming launches</h5>
-                        <p class="card-text">Magic Eden tracks and vets the projects it features on the
+                        <p class="card-text text-about">Magic Eden tracks and vets the projects it features on the
                             platform, also highlighting some of the most important upcoming launches. This
                             can help investors save a lot of research work.</p>
                     </div>
@@ -105,7 +105,7 @@
                     <div class="card-body">
                         <i class="fa-solid fa-chart-line icon-about"></i>
                         <h5 class="card-title title-about">Stats</h5>
-                        <p class="card-text">When buying an NFT, there are elements that help to give it
+                        <p class="card-text text-about">When buying an NFT, there are elements that help to give it
                             value over time, "Stats" shows some indicators of which NFTs are popular now
                             and which will continue to be popular.</p>
                     </div>
