--- a/infoNFT.html
+++ b/infoNFT.html
@@ -59,6 +59,8 @@
             const response = await fetch('https://magic-eden-nfts-default-rtdb.firebaseio.com/products.json');
             data = await response.json();
 
+            console.log("hola", data.opinion)
+
             products = data.map(d => {
                 let dCopy = {
                     ...d
@@ -97,7 +99,10 @@
     <article id="comment">
             <p id="comment_user"> ${com.userName}</p>
             <section id="comment_body">
+                <div id="comment_img_container">
                 <img id="comment_img" src=" ${com.pictureProfile} ">
+            </div>
+
                 <div id="comment_text">
                     <p id="comment_comment"> ${com.comment} </p>
                 </div>
