Evento de card en landing page

--- a/landing.html
+++ b/landing.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./public/Components/productCard/product-card.js">
-    <link rel="stylesheet" href="/Components/AuctionCards/auctionCard.css">
+    <link rel="stylesheet" href="./public/Components/AuctionCards/auctionCard.css">
     <link rel="stylesheet" type="text/css" href="auctionSection.css">
     <link rel="stylesheet" type="text/css" href="finishedAuctionSection.css">
     <link rel="stylesheet" type="text/css" href="twitterSection.css">
@@ -189,9 +189,7 @@
                 <section class="popular-collections">
                     <h2>Popular Collections</h2>
 
-                    <product-card></product-card>
-                    <product-card></product-card>
-                    <product-card></product-card>
+                    <auction-card></auction-card>
 
                 </section>
 
